@@ -109,3 +109,5 @@ William DiPlacido <bimbasaari at yahoo dot com>
   Frequency from /proc/cpuinfo
   Some other SETI stuff
 
+zimba-tm <zimba-tm at users dot sourceforge dot net>
+  alignment none patch
