@@ -1,7 +1,8 @@
 # $Id$
 
 2005-08-20
-	* Applied patch from zimba-tm, closes bug 1260225
+	* Applied patch from zimba-tm, closes patch 1260225
+	* Fixed ugly gradient bug.  closes bug 1255608
 
 2005-08-12
 	* Multiple unit additions and modifications
